# gpr_fluxnet

./: .gitignore  README.md  change-log.txt  copy_calibrated_parms.py  copy_calibrationFiles.py  environment_setup.sh  make_gpr_training_data.py  make_slurm_cal_files.py  make_slurm_da_files.py  make_slurm_gpr_files.py  make_slurm_init_files.py  setup_DA_dirs.py  setup_cal_dirs.py  setup_gpr_dirs.py  setup_init_dirs.py  setup_one_cal_dir.py  soil_moisture_submit_cal_jobs.sh  soil_moisture_submit_da_jobs.sh  soil_moisture_submit_gpr_jobs.sh  soil_moisture_submit_init_jobs.sh
data/: parm_bounds.txt
data/pals/: Site_Years.txt  Sites.txt  TestSiteYears.txt  TrainSiteYears.txt
initialize/site_data/: plant_init_21_2011.txt  soil_init_21.txt  soil_init_21_2010.txt  soil_init_21_2011.txt  soil_init_21_2012.txt  soil_init_21_2013.txt  soil_init_21_2014.txt  soil_init_21_2015.txt  soil_init_21_2016.txt  soil_init_21_2017.txt  soil_init_21_2018.txt
job_scripts/: master_cal.slurm  master_da.sh  master_da.slurm  master_gpr.slurm  master_gpr_30day.slurm  master_init.sh
job_scripts/cal_scripts/: soil_moisture_cal_11_2002.slurm  soil_moisture_cal_11_2003.slurm  soil_moisture_cal_11_2004.slurm  soil_moisture_cal_11_2005.slurm  soil_moisture_cal_13_2002.slurm  soil_moisture_cal_13_2003.slurm  soil_moisture_cal_14_2003.slurm  soil_moisture_cal_14_2004.slurm  soil_moisture_cal_14_2005.slurm  soil_moisture_cal_14_2006.slurm  soil_moisture_cal_17_2002.slurm  soil_moisture_cal_17_2003.slurm  soil_moisture_cal_18_2002.slurm  soil_moisture_cal_18_2003.slurm  soil_moisture_cal_18_2004.slurm  soil_moisture_cal_18_2005.slurm  soil_moisture_cal_1_2003.slurm  soil_moisture_cal_1_2004.slurm  soil_moisture_cal_1_2005.slurm  soil_moisture_cal_1_2006.slurm  soil_moisture_cal_2_2000.slurm  soil_moisture_cal_2_2001.slurm  soil_moisture_cal_2_2002.slurm  soil_moisture_cal_2_2003.slurm  soil_moisture_cal_2_2004.slurm  soil_moisture_cal_2_2005.slurm  soil_moisture_cal_2_2006.slurm  soil_moisture_cal_5_1999.slurm  soil_moisture_cal_5_2000.slurm  soil_moisture_cal_5_2002.slurm  soil_moisture_cal_5_2005.slurm  soil_moisture_cal_7_2004.slurm  soil_moisture_cal_7_2005.slurm
job_scripts/da_scripts/: soil_moisture_da_11_2002.sh  soil_moisture_da_11_2002.slurm  soil_moisture_da_11_2003.sh  soil_moisture_da_11_2003.slurm  soil_moisture_da_11_2004.sh  soil_moisture_da_11_2004.slurm  soil_moisture_da_11_2005.sh  soil_moisture_da_11_2005.slurm  soil_moisture_da_13_2002.sh  soil_moisture_da_13_2002.slurm  (+74 more)
model_code/: readme.txt
setup_and_run_scripts/: make_slurm_cal_files.py  make_slurm_da_files.py  make_slurm_gpr_files.py  setup_cal_dirs.py  soil_moisture_run_da_jobs.sh
setup_dir/: OstNonDomSolutions0.txt  OstOutput0.txt  cal_parms.txt  cal_parms_1.txt  cleanCalFolders.py  clean_ensemble_files.sh  deleteTestTrainData.sh  evaluate_30day_output.py  gen_input_output_files.py  initialize.py  initialize.sh  loop_and_delete_stuff.sh  loop_and_do_stuff.sh  loop_and_run_onestep.sh  makeGPRFiles.py  makeSingleYearCalFiles.py  makeTwoYearFiles.py  make_gpr_training_data_one_siteyear.py  make_obs_da_30day.py  match_sm_CFD.py  noahmp_objfun.out  ostIn.txt  plot_ALL_init_sm.py  plot_SM_assimilated.py  plot_SM_ensemble.py  plot_enks.py  plot_init_sm.py  plot_output.py  plot_save_sm.py  print_All_RMSE_results.py  print_Test_results.py  print_cal_results.sh  print_gpr_results_via_rmseWet.sh  print_gpr_slurm_out_ends25.sh  rematch_sm_CFD.py  run_all_call_dirs.sh  save_da_30day_output.py  sce.in  sce.out
soil_moisture/gpr-mpi/examples/: CMakeLists.txt  gpr_fortran_sample.sh  make_predictions_sample.cpp  spgp_train_craig_oct.sh  spgp_train_dry.slurm  spgp_train_wet.slurm  spgp_train_wetOnly.slurm  train_gpr_NIGP.cpp  train_gpr_NIGP.sh  train_gpr_kfold.cpp  train_gpr_sample.cpp  train_gpr_sample.sh  train_gpr_sample2.sh  v1_train_gpr_sample.cpp
soil_moisture/gpr-mpi/framework/: CMakeLists.txt  conjugate_gradient.h  gpr.h  gpr_extern_C_routines.cpp  layout.h  option_wrapper_module.F90  random.h  scalapack_matrix.cpp  timer_extern_C_routines.cpp  timer_wrapper_module.F90  utils.h
soil_moisture/gpr-mpi/regression_test/: CMakeLists.txt  regression_test.cpp
soil_moisture/gpr-noah/: CMakeLists.txt  configure
soil_moisture/gpr-noah/build_old2/: CMakeCache.txt  Makefile
soil_moisture/gpr-noah/build_old2/examples/: Makefile
soil_moisture/gpr-noah/build_old2/framework/: Makefile  cmake_install.cmake
soil_moisture/gpr-noah/build_old2/regression_test/: Makefile
soil_moisture/gpr-noah/build_old2/src/: Makefile  cmake_install.cmake
soil_moisture/gpr-noah/examples/: CMakeLists.txt  gpr_fortran_sample.F90  make_predictions_sample.sh  objfun.F90  objfun.F90~  sub_sample_statistics.cpp  sub_sample_statistics.sh  train_gpr_kfold.sh  train_gpr_sample.cpp  train_gpr_sample2.cpp
soil_moisture/gpr-noah/framework/: comm.h  comm_mod.F90  comm_mpi.cpp  comm_serial.cpp  gpr_wrapper_module.F90  layout_mpi.h  layout_serial.h  option_extern_C_routines.cpp  options.cpp  options.h  sampling_utilities.h  scalapack.h  scalapack_matrix.h  timer.h
soil_moisture/gpr-noah/regression_test/: regression_test.F90
soil_moisture/gpr-noah/src/: CMakeLists.txt  driver.F90  enks.F90  module_sf_noahmplsm.F90
soil_moisture/gpr-noah/unit_tests/: CMakeLists.txt  matrix_test.h
(+141 files in other folders)
